--- a/TagsCloudVisualisation/TagsCloudVisualisation.csproj
+++ b/TagsCloudVisualisation/TagsCloudVisualisation.csproj
@@ -71,6 +71,7 @@
   <ItemGroup>
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="Extensions\GraphicExtensions.cs" />
+    <Compile Include="Result.cs" />
     <Compile Include="WordPreparer\IWordPreparer.cs" />
     <Compile Include="WordPreparer\SimpleWordPreparer.cs" />
     <Compile Include="Extensions\SizeFExtensions.cs" />
