using conventions and container installers added result<t> to preparer

--- a/TagsCloudVisualisation/TagsCloudVisualisation.csproj
+++ b/TagsCloudVisualisation/TagsCloudVisualisation.csproj
@@ -72,6 +72,7 @@
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="Extensions\GraphicExtensions.cs" />
     <Compile Include="Result.cs" />
+    <Compile Include="TagsCloudVisualizationInstaller.cs" />
     <Compile Include="WordPreparer\IWordPreparer.cs" />
     <Compile Include="WordPreparer\SimpleWordPreparer.cs" />
     <Compile Include="Extensions\SizeFExtensions.cs" />
